removed the PACs text from the whole website and removed the blog section from the home page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/JDFPACS-Logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="PACS - Building a vibrant performing arts centre for our community. Non Profit Organization." />
-    <title>PACS - Building The Heart of the Community</title>
+    <meta name="description" content="Building a vibrant performing arts centre for our community. Non Profit Organization." />
+    <title>Building The Heart of the Community</title>
   </head>
   <body>
     <div id="root"></div>
